utoipa-gen/tests/snapshots/path_derive_auto_into_responses_actix__path_operation_auto_types_fn_parameters-2.snap
---
source: utoipa-gen/tests/path_derive_auto_into_responses_actix.rs
expression: "&path.pointer(\"/requestBody\")"
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "$ref": "#/components/schemas/ItemBody"
      }
    }
  },
  "required": true
}
