utoipa-gen/tests/snapshots/path_derive_auto_into_responses_actix__path_operation_auto_types_responses.snap
---
source: utoipa-gen/tests/path_derive_auto_into_responses_actix.rs
expression: "&path.pointer(\"/responses\").unwrap()"
---
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "$ref": "#/components/schemas/Item"
        }
      }
    },
    "description": "Item found"
  },
  "404": {
    "description": "No item found"
  },
  "500": {
    "description": "Error"
  }
}
