utoipa-gen/tests/snapshots/path_derive_auto_into_responses_actix__path_operation_optional_json_body.snap
---
source: utoipa-gen/tests/path_derive_auto_into_responses_actix.rs
expression: "&path.pointer(\"/responses\").unwrap()"
snapshot_kind: text
---
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "$ref": "#/components/schemas/Item"
        }
      }
    },
    "description": "Item found"
  },
  "404": {
    "description": "No item found"
  }
}
